fix too much space between skill icons

--- a/src/styles/components/_skills.scss
+++ b/src/styles/components/_skills.scss
@@ -2,7 +2,9 @@
   width: 40px;
   height: 45px;
 }
+
 #technologies .list {
+  max-width: 500px;
   margin-top: 15px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
